# stream_chat_bot

./: .env_example  README.md  chatbot_web_demo.py  log_manager.py  project_overview.md  pyproject.toml
app/: chatbot_pipeline.py  config.py  hot_reload_manager.py  logger_config.py  memory_manager.py  prompt_manager.py
app/prompts/: assistant_prompt.txt
static/: index.html  main.js  style.css
test/: test.md  test_logging.py
